Added CEDAR Overview viewo to login screen

--- a/keycloak/themes/cedar/login/resources/css/login.css
+++ b/keycloak/themes/cedar/login/resources/css/login.css
@@ -357,6 +357,8 @@ ol#kc-totp-settings li:first-of-type {
 }
 
 #kc-container-wrapper {
-    background-color: #0a2b43 ;
-    opacity:0.8;
+    background-color: #3a5366 ;
+}
+
+#video-player{
 }
