Have smaller video for xs

--- a/keycloak/themes/cedar/login/resources/css/login.css
+++ b/keycloak/themes/cedar/login/resources/css/login.css
@@ -363,3 +363,7 @@ ol#kc-totp-settings li:first-of-type {
 #video-player {
     overflow: hidden;
 }
+
+#video-player-xs {
+    overflow: hidden;
+}
